# LPC21XXISP

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.h  native-lib.cpp  stty.cpp  stty.h
app/src/main/java/com/xysantai/myisp/: Device.java  InputDialog.java  MainActivity.java  MyApplication.java  Utils.java
app/src/main/res/color/: selector_spinner_text.xml
app/src/main/res/drawable/: baseline_settings_24.xml  button_style_stroke.xml  button_style_stroke3.xml  selector_spinner_default.xml
app/src/main/res/layout/: spinner_default_item.xml  spinner_item.xml
app/src/main/res/layout-sw720dp/: activity_main.xml  dialog_input_layout.xml  spinner_default_item.xml  spinner_item.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
